# wraptor-agent

./: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
.github/workflows/: ci.yml
public/: wrapMap.json
src/: constants.ts  index.ts
src/api/: plugin.ts  swagger.ts  unwrap.ts  wrap.ts
src/app/: page.tsx
src/app/api/ai-plugin/: constants.ts  route.ts
src/app/api/tools/: util.ts
src/app/api/tools/null/: route.ts
src/app/api/tools/weth/unwrap/: route.ts
src/app/api/tools/weth/wrap/: route.ts
src/lib/: schema.ts  static.ts  util.ts
tests/: e2e.spec.ts  safe.util.spec.ts  schema.spec.ts  weth.spec.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
