[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-contract = "1.0.9"
alloy-json-abi = "1.1.2"
alloy-primitives = { version = "1.1.2", features = ["serde"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
wasm-bindgen = "0.2"
